# yai-response

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  buildspec.yml  nginx.conf
yai-booking/: CMakeLists.txt  yai-booking-abi.cc  yai-booking-handlers.hpp  yai-booking-migration.cc  yai-booking.cc
yai-booking/handlers/: consultants-list.cpp  import-csv.cc
yai-booking/resources/: booking.csv  consultants.txt  customers.txt  import.json
yai-chat/: CMakeLists.txt  yai-chat-abi.cc
yai-core/: CMakeLists.txt  pyAi.cpp  pyAi.hpp  utils.hpp  yAI.cpp  yAI.hpp  yai-migration.cpp  yai-migration.hpp
yai-web/: manage.py  requirements.txt  sinput
yai-web/yai_booking/: apps.py  forms.py  urls.py  views.py  yai_booking_abi.pyi
yai-web/yai_booking/templates/booking/: simple-import.html
yai-web/yai_chat/: apps.py  urls.py  views.py  yai_chat_abi.pyi
yai-web/yai_chat/templates/yai/chat/: item.html  message.html  partial.html
yai-web/yai_signin/: apps.py  forms.py  urls.py  views.py
yai-web/yai_signin/templates/yai/signin/: index.html
yai-web/yaiweb/: asgi.py  settings.py  urls.py  wsgi.py
